[package]
name = "uhmtowt"
version = "0.1.0"
authors = ["Jengamon <bob.hostern@gmail.com>"]
edition = "2018"
description = "A .uhm to .wt converter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3"
structopt = { version = "0.3", features = [ "paw" ] }
paw = "1.0"
rand = "0.7"
rand_pcg = "0.2"
thiserror = "1"
anyhow = "1"
lazy_static = "1"
rustfft = "4"